--- a/Parcial2_LondonoValenciaSebastian/Parcial2_LondonoValenciaSebastian/Views/Tickets/Edit.cshtml
+++ b/Parcial2_LondonoValenciaSebastian/Parcial2_LondonoValenciaSebastian/Views/Tickets/Edit.cshtml
@@ -20,7 +20,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="IsUsed" class="control-label"></label>
-                <input asp-for="IsUsed" class="form-control" />
+                <input asp-for="IsUsed" class="form-control" value="True" readonly />
                 <span asp-validation-for="IsUsed" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -28,16 +28,15 @@
                 <input asp-for="EntranceGate" class="form-control" />
                 <span asp-validation-for="EntranceGate" class="text-danger"></span>
             </div>
+            <br/>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-outline-primary" />
+                <a asp-action="Index" class="btn btn-outline-success">Back to List</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
