--- a/Parcial2_LondonoValenciaSebastian/Parcial2_LondonoValenciaSebastian/Views/Tickets/Edit.cshtml
+++ b/Parcial2_LondonoValenciaSebastian/Parcial2_LondonoValenciaSebastian/Views/Tickets/Edit.cshtml
@@ -23,11 +23,16 @@
                 <input asp-for="IsUsed" class="form-control" value="True" readonly />
                 <span asp-validation-for="IsUsed" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="EntranceGate" class="control-label"></label>
-                <input asp-for="EntranceGate" class="form-control" />
-                <span asp-validation-for="EntranceGate" class="text-danger"></span>
-            </div>
+                 <div class="form-group">
+                  <label asp-for="EntranceGate" class="control-label"></label>
+                  <select asp-for="EntranceGate" class="form-control">
+                    <option value="Norte">Norte</option>
+                    <option value="Sur">Sur</option>
+                    <option val ue="Oriental">Oriental</option>
+                    <option value="Occidental">Occidental</option>
+                  </select>
+                  <span asp-validation-for="EntranceGate" class="text-danger"></span>
+                </div>
             <br/>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-outline-primary" />
