--- a/Parcial2_LondonoValenciaSebastian/Parcial2_LondonoValenciaSebastian/Views/Tickets/Edit.cshtml
+++ b/Parcial2_LondonoValenciaSebastian/Parcial2_LondonoValenciaSebastian/Views/Tickets/Edit.cshtml
@@ -35,8 +35,8 @@
                 </div>
             <br/>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-outline-primary" />
-                <a asp-action="Index" class="btn btn-outline-success">Back to List</a>
+                <input type="submit" value="Guardar" class="btn btn-outline-primary" />
+                <a asp-action="Index" class="btn btn-outline-success">Regresar</a>
             </div>
         </form>
     </div>
