--- a/Parcial2_LondonoValenciaSebastian/Parcial2_LondonoValenciaSebastian/Views/Tickets/Index.cshtml
+++ b/Parcial2_LondonoValenciaSebastian/Parcial2_LondonoValenciaSebastian/Views/Tickets/Index.cshtml
@@ -86,7 +86,7 @@
                             </td>
                             <td>
                                     <!-- <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-success">Edit</a> -->
-                                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-info">Details</a>
+                                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-info">Detalles</a>
                                     <!-- <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger">Delete</a> -->
                             </td>
                         </tr>
